Merged PR 1214: feat(data-service): tests